--- a/css/styles.css
+++ b/css/styles.css
@@ -504,6 +504,7 @@ padding-bottom: 60px;
 .footer-info {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .footer-connect {
@@ -944,6 +945,8 @@ top: 50%;
 left: 12px;
 transform: translateY(-50%);
 transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+width: 18px;
+height: 18px;
 }
 
 .form-data:focus + .form-icon {
@@ -1000,7 +1003,6 @@ width: 16px;
 height: 15px;
 border: 2px solid var(--header-text-color);
 border-radius: 4px;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 cursor: pointer;
 
 }
