--- a/css/main.css
+++ b/css/main.css
@@ -44,4 +44,966 @@ button {
 .link {
   text-decoration: none;
 }
+
+.header {
+  background-color: var(--header-color);
+  padding-top: 24px;
+  padding-bottom: 25px;
+  border-bottom: 1px solid;
+  border-color: #ECECEC;
+}
+
+.header-portfolio {
+  border-bottom: solid;
+  border-color: #ECECEC;
+  border-width: 1px;
+}
+
+.header-logo {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: var(--header-logo-color);
+  margin-right: 93px;
+  white-space: nowrap;
+}
+
+.header-accent {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: var(--accent-color);
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.menu-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.menu-item {
+  position: relative;
+}
+
+.menu-link-active::after {
+  content: '';
+  position: absolute;
+  background-color: var(--accent-color);
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  bottom: -28px;
+  right: 0;
+}
+
+.menu-link {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--title-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-list {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  color: var(--header-text-color);
+  display: flex;
+}
+
+.menu-link:hover,
+.menu-link:focus {
+  color: var(--accent-color);
+}
+
+.header-tel,
+.header-mail {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--text-color);
+  transition: color 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-tel:hover,
+.header-tel:focus {
+  color: var(--accent-color);
+  cursor: pointer;
+}
+
+.header-mail:hover,
+.header-mail:focus {
+  color: var(--accent-color);
+  cursor: pointer;
+}
+
+.contact-icon {
+  margin-right: 10px;
+  align-items: center;
+}
+
+.contact-icon {
+  fill: var(--text-color);
+  transition: fill 1250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-mail:hover .contact-icon,
+.header-mail:focus .contact-icon {
+  fill: var(--accent-color);
+}
+
+.header-tel:hover .contact-icon,
+.header-tel:focus .contact-icon {
+  fill: var(--accent-color);
+}
+
+.header-contacts {
+  display: inline-flex;
+  margin-left: auto;
+}
+
+.header-contact:not(:last-child) {
+  margin-right: 50px;
+}
+
+.footer {
+  background-color: #2f303a;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.footer-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer-connect {
+  margin-right: 70px;
+}
+
+.connect-item:not(:last-child) {
+  margin-bottom: 9px;
+}
+
+.footer-logo {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: var(--header-color);
+  white-space: nowrap;
+}
+
+.footer-accent {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  color: var(--accent-color);
+}
+
+.connect-item:not(:last-child) {
+  margin-bottom: 9px;
+}
+
+.contacts-address {
+  font-style: inherit;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--header-color);
+  margin-top: 20px;
+}
+
+.footer-address {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(----footer-address-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-mail,
+.footer-tel {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--footer-contacts-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-mail:hover,
+.footer-mail:focus {
+  color: var(--accent-color);
+}
+
+.footer-tel:hover,
+.footer-tel:focus {
+  color: var(--accent-color);
+}
+
+.footer-address:hover,
+.footer-address:focus {
+  color: var(--accent-color);
+}
+
+.social-links {
+  width: 206px;
+  height: 80px;
+  margin-bottom: 40px;
+  margin-right: 93px;
+}
+
+.social-link-icon {
+  width: 20px;
+  height: 20px;
+  fill: var(--header-color);
+}
+
+.social-link {
+  width: 44px;
+  height: 44px;
+  border-radius: 50px;
+  background-color: rgba(255, 255, 255, 0.1);
+  padding: 12px;
+  display: flex;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-link:hover,
+.social-link:focus {
+  background-color: var(--accent-color);
+}
+
+.social-links-text {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--header-color);
+  text-align: justify;
+}
+
+.social-link-item {
+  margin-right: 10px;
+}
+
+.social-link-list {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.signup-form {
+  display: block;
+  margin-bottom: 40px;
+}
+
+.signup-email-data {
+  border-radius: 1px solid;
+  border-color: rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  background-color: transparent;
+  width: 358px;
+  height: 50px;
+  padding-left: 16px;
+  margin-right: 12px;
+  color: var(--header-color);
+}
+
+.signup-email-data::placeholder {
+  font-size: 16px;
+  Line-height: 1.07;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.signup {
+  margin-bottom: 20px;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--header-color);
+  text-align: justify;
+}
+
+.signup-email {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+.signup-btn {
+  display: inline-flex;
+  border: none;
+  width: 200px;
+  height: 50px;
+  padding: 10px 28px 10px 29px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  align-items: center;
+  text-align: center;
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px black;
+  border-radius: 4px;
+  color: var(--header-color);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.signup-btn:hover,
+.signup-btn:focus {
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.submit-icon {
+  fill: var(--header-color);
+  margin-left: 10px;
+}
+
+.backdrop {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 500ms linear, visibility 500ms linear;
+}
+
+.backdrop.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  width: 528px;
+  height: 582px;
+  background-color: #fff;
+  border-radius: 4px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 40px;
+}
+
+.modal-close {
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close:hover .close,
+.modal-close:focus .close {
+  fill: var(--accent-color);
+}
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-header {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 1,15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--header-text-color);
+  margin-bottom: 12px;
+}
+
+.form-data {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  margin-bottom: 10px;
+  padding-left: 30px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  position: relative;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-data:focus {
+  outline: none;
+  border-color: var(--accent-color);
+}
+
+.form-comment {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  margin-bottom: 20px;
+  margin-top: 4px;
+  resize: none;
+  padding: 12px 16px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-comment:focus {
+  outline: none;
+  border-color: var(--accent-color);
+}
+
+.form-comment::placeholder {
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 1,16;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.form-wrap {
+  position: relative;
+  margin-top: 4px;
+}
+
+.form-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 18px;
+  height: 18px;
+}
+
+.form-data:focus + .form-icon {
+  fill: var(--accent-color);
+}
+
+.form-data {
+  margin-top: 4px;
+}
+
+.form-btn {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  text-align: center;
+  letter-spacing: 0.06em;
+  border: none;
+  border-radius: 4px;
+  color: var(--header-color);
+  background-color: var(--accent-color);
+  min-Width: 200px;
+  height: 50px;
+  display: block;
+  margin: 0 auto;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-btn:hover, .form-btn:focus {
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.form-textspace {
+  font-size: 12px;
+  Line-height: 1.17;
+  color: #757575;
+}
+
+.form-checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  margin-bottom: 30px;
+}
+
+.outer-checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  left: 0;
+  margin-left: 15px;
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--header-text-color);
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.check {
+  appearance: none;
+  position: absolute;
+}
+
+.check:checked + .outer-checkbox {
+  background-color: transparent;
+  background-image: url(../img/check.svg);
+  border: none;
+  display: block;
+  align-content: center;
+  justify-content: center;
+  width: 16px;
+  height: 15px;
+}
+
+.checkbox-text {
+  font-size: 14px;
+  line-height: 1.46;
+  Align: Left;
+  Letter-spacing: 3%;
+  color: #757575;
+}
+
+.checkbox-text-link {
+  color: var(--accent-color);
+}
+
+.hero-section {
+  align-items: center;
+  padding-top: 200px;
+  padding-bottom: 200px;
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/hero-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.hero-text {
+  min-width: 696px;
+  color: var(--header-color);
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  width: 696px;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
+
+.hero-btn {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  text-align: center;
+  letter-spacing: 0.06em;
+  border-radius: 4px;
+  border-color: transparent;
+  color: var(--header-color);
+  background-color: var(--accent-color);
+  min-Width: 200px;
+  height: 50px;
+  display: block;
+  margin: 0 auto;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hero-btn:hover, .hero-btn:focus {
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.advantage {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  display: flex;
+}
+
+.advantage-text {
+  width: 270px;
+}
+
+.advantage-text:not(:last-child) {
+  margin-right: 30px;
+}
+
+.advantage-text-list {
+  display: flex;
+}
+
+.advantage-detail {
+  width: 270px;
+  height: 120px;
+  background-color: #F5F4FA;
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 25px 100px 25px 100px;
+}
+
+.adv-detail-icon {
+  display: flex;
+  justify-content: center;
+}
+
+.advantage-item {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--header-text-color);
+  margin-bottom: 10px;
+}
+
+.advantage-detail-item {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--text-color);
+  width: 270px;
+}
+
+.activities-container {
+  padding-bottom: 94px;
+}
+
+.activities-list {
+  display: flex;
+  margin-top: 50px;
+}
+
+.activities-text:not(:last-child) {
+  margin-right: 30px;
+}
+
+.activities-text {
+  position: relative;
+}
+
+.activities-sign {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  bottom: 0;
+  width: 100%;
+}
+
+.activities-sign-text {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  background-color: rgba(47, 48, 58, 0.8);
+  color: #FFFFFF;
+  width: 100%;
+  height: 70px;
+  text-align: center;
+  padding-top: 27px;
+}
+
+.activities-header {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--header-text-color);
+  margin-bottom: 50px;
+}
+
+.team {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--header-text-color);
+  margin-bottom: 50px;
+}
+
+.team-text {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  background-color: #F5F4FA;
+}
+
+.team-members {
+  display: flex;
+}
+
+.member-text:not(:last-child) {
+  margin-right: 30px;
+}
+
+.member-text {
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  background-color: #fff;
+}
+
+.member-item {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.team-member {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  text-align: center;
+  color: var(--header-text-color);
+}
+
+.team-member-occupation {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--text-color);
+  padding-top: 10px;
+  margin-bottom: 16px;
+}
+
+.team-contacts {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.team-contact {
+  border-radius: 50px;
+  background-color: rgba(255, 255, 255, 0.1);
+  padding: 12px;
+  display: flex;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-contacts-detail {
+  margin-right: 10px;
+  width: 44px;
+  height: 44px;
+}
+
+.team-contact-icon {
+  fill: #AFB1B8;
+  width: 20px;
+  height: 20px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-contact:hover,
+.team-contact:focus {
+  background-color: var(--accent-color);
+}
+
+.team-contact:hover .team-contact-icon,
+.team-contact:focus .team-contact-icon {
+  fill: #FFFFFF;
+}
+
+.clients {
+  padding-bottom: 94px;
+  padding-top: 94px;
+}
+
+.clients-item {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--header-text-color);
+  margin-bottom: 50px;
+}
+
+.clients-list {
+  display: flex;
+  justify-content: center;
+}
+
+.client-detail-icon {
+  display: flex;
+  justify-content: center;
+  fill: #AFB1B8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.client-detail {
+  width: 170px;
+  height: 92px;
+  border: solid;
+  border-color: #AFB1B8;
+  border-width: 1px;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.client:not(:last-child) {
+  margin-right: 30px;
+}
+
+.client-detail:hover,
+.client-detail:focus {
+  border-color: var(--accent-color);
+}
+
+.client-detail:hover .client-detail-icon,
+.client-detail:focus .client-detail-icon {
+  fill: var(--accent-color);
+}
+
+.info-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.btn-list {
+  display: flex;
+  justify-content: center;
+  margin-right: 8px;
+  margin-bottom: 50px;
+}
+
+.btn-list-item {
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--header-text-color);
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-right: 22px;
+  padding-left: 22px;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-menu-list:not(:last-child) {
+  margin-right: 8px;
+}
+
+.btn-list-item:hover,
+.btn-list-item:focus {
+  background-color: var(--accent-color);
+  color: var(--header-color);
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.list-item {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--header-text-color);
+}
+
+.list-item-text {
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+  color: var(--text-color);
+}
+
+.items-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -30px;
+  margin-top: -30px;
+}
+
+.offer-item {
+  flex-basis: calc(100% / 3 - 30px);
+  margin-left: 30px;
+  margin-top: 30px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.offer-item:hover,
+.offer-item:focus {
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+}
+
+.offer-item:hover .offer-item-text {
+  transform: translateY(0);
+}
+
+.offer-item-overlay {
+  position: relative;
+  overflow: hidden;
+}
+
+.offer-item-text {
+  position: absolute;
+  padding: 63px 24px;
+  top: 0;
+  left: 0;
+  color: var(--footer-address-color);
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.item-text {
+  padding: 20px 24px 20px 24px;
+  border: solid;
+  border-width: 1px;
+  border-color: #EEEEEE;
+}
+
+.list-item-text {
+  margin-top: 4px;
+}
+
+.list-item-text {
+  justify-content: space-between;
+  align-content: center;
+}
 /*# sourceMappingURL=main.css.map */
