--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -191,7 +191,7 @@ margin-bottom: 20px;
   align-items: center;
   text-align: center;
   background-color: var(--accent-color);
-  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 15%);
   border-radius: 4px;
   color: var(--header-color);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
