--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,8 +9,8 @@
 
 
 //COMPONENTS
-@import './component/header';
-@import './component/footer';
+@import './components/header';
+@import './components/footer';
 @import './components/backdrop';
 @import './components/modal';
 
